construcao dos modelos e relatorio

--- a/codes/notebook/01_DataPreparation.ipynb
+++ b/codes/notebook/01_DataPreparation.ipynb
@@ -1,20 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20bab463",
+   "cell_type": "markdown",
+   "id": "d6ea406e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![title](imgs/cover.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "687502c7-aa3a-477e-8fe2-3565401bbdbe",
+   "cell_type": "markdown",
+   "id": "761ef994",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#  Preparação dos dados\n",
+    "A primeira etapa do projeto consiste na preparação e exploração inicial dos dados, um passo essencial para garantir a qualidade e a relevância das informações que serão utilizadas nos modelos de machine learning. Nesta fase, foi realizada uma análise detalhada da estrutura dos dados, incluindo uma revisão dos tipos de dados para identificar necessidades de conversões ou ajustes. Verificou-se a presença de valores ausentes, avaliando a melhor abordagem para tratá-los, seja por imputação, exclusão ou outras técnicas, dependendo do contexto e da quantidade.\n",
+    "\n",
+    "Além disso, a estrutura dos dados foi examinada para entender as relações e dependências entre as variáveis. A contagem das classes em variáveis categóricas foi realizada para identificar possíveis desequilíbrios que poderiam afetar o desempenho do modelo, levando à consideração de técnicas de balanceamento de classes se necessário. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d73131c",
+   "metadata": {},
+   "source": [
+    "Dicionário do Conjunto de Dados\n",
+    "\n",
+    "- Id: Identificador numérico dos testes\n",
+    "- Country: país de origem do teste\n",
+    "- Creation_platform: plataforma pela qual a loja foi criada\n",
+    "- Admin_visits: quantidade de visitas registradas pelo administrador\n",
+    "- Intercom_conversations: quantidade de conversas registradas pela loja com a equipe de suporte\n",
+    "- Source_pulido: origem da loja por campanha de marketing\n",
+    "- Creation_weekday: dia da semana em que a loja foi criada\n",
+    "- Creation_hour: hora do dia em que a loja foi criada\n",
+    "- Products_with_description: quantidade de produtos com descrição\n",
+    "- total_products_with_images: quantidade de produtos com imagem\n",
+    "- total_product_categories: quantidade de categorias de produtos criadas\n",
+    "- total_events_on_Android: registro da quantidade de eventos que o teste teve por um dispositivo com sistema operacional Android\n",
+    "- total_events_on_Web: registro da quantidade de eventos que o teste teve por um computador\n",
+    "- total_events_on_iOS: registro da quantidade de eventos que o teste teve por um dispositivo com sistema operacional iOS\n",
+    "- Target:\n",
+    "    - 1: O teste se converteu em pagamento após o período de teste.\n",
+    "    - 0: O teste não se converteu em pagamento.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -874,6 +903,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b963c247",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Exportação dos dados\n",
+    "\n",
+    "Após concluir as análises e ajustes necessários na preparação dos dados, a última atividade desta etapa envolve a exportação dos dados preparados para uso nas próximas fases do projeto. Esta ação é fundamental para garantir a integridade e a continuidade do fluxo de trabalho em análise de dados e machine learning."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "3a3a3539-6ff3-4fc0-a8f4-a0d6b21726be",
@@ -908,12 +948,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd2894aa-3bea-4057-8f01-837dcdcae36b",
+   "cell_type": "markdown",
+   "id": "9f59a2e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![title](imgs/end.png)"
+   ]
   }
  ],
  "metadata": {
