--- a/codes/notebook/04_Deploy.ipynb
+++ b/codes/notebook/04_Deploy.ipynb
@@ -1,12 +1,487 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2c895bb8",
+   "metadata": {},
+   "source": [
+    "![title](imgs/cover.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "756141e2",
+   "metadata": {},
+   "source": [
+    "# Deploy dos modelos de Machine Learning\n",
+    "A quarta etapa foca no deploy e na aplicação dos modelos de machine learning. Inicia-se com a importação dos modelos, artefatos e dados necessários para realizar previsões. Com todos os componentes em mãos, os dados são preparados seguindo o mesmo procedimento utilizado no treinamento dos modelos, garantindo que as previsões sejam feitas com a máxima precisão. Isso envolve aplicar encoders nas variáveis categóricas e normalizar as variáveis numéricas. Uma vez que os dados estão preparados, cada um dos três modelos selecionados é usado para fazer previsões. Esta etapa é vital para testar a eficácia dos modelos em condições reais e observar como cada um responde a novos dados. O processo completo não só permite a aplicação prática dos modelos de machine learning, mas também estabelece a base para futuras iterações e melhorias baseadas nos resultados obtidos.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7520d00f",
+   "execution_count": 1,
+   "id": "dfb408f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from joblib import load"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "876ae787",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Importação dos Artefatos, Modelos e Dados\n",
+    "Esta seção é dedicada à importação de todos os recursos necessários para o deployment dos modelos. Isso inclui carregar os modelos de machine learning previamente salvos, bem como os artefatos como encoders e scalers, e os dados sobre os quais as previsões serão feitas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "671d7e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carregando data preparation\n",
+    "encoder_loaded = load('../models/ordinal_encoder.joblib')\n",
+    "scaler_loaded = load('../models/scaler.joblib')\n",
+    "\n",
+    "# Carregar as variáveis selecionadas\n",
+    "loaded_features = load('../models/selected_features.pkl')\n",
+    "\n",
+    "# Carregar o modelos\n",
+    "best_rf_model = load('../models/best_rf_model.pkl')\n",
+    "best_ada_model = load('../models/best_ada_model.pkl')\n",
+    "best_svm_model = load('../models/best_svm_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "165f9dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import data\n",
+    "df = pd.read_csv('data/cleaned_test_data.csv', sep = ';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4df3feb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(585340, 14)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>creation_platform</th>\n",
+       "      <th>admin_visits</th>\n",
+       "      <th>intercom_conversations</th>\n",
+       "      <th>source_pulido</th>\n",
+       "      <th>creation_weekday</th>\n",
+       "      <th>creation_hour</th>\n",
+       "      <th>products_with_description</th>\n",
+       "      <th>total_products_with_images</th>\n",
+       "      <th>total_product_categories</th>\n",
+       "      <th>total_events_on_Android</th>\n",
+       "      <th>total_events_on_Web</th>\n",
+       "      <th>total_events_on_iOS</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BR</td>\n",
+       "      <td>mobile_app</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BR</td>\n",
+       "      <td>mobile_web</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Google CPC no Brand</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BR</td>\n",
+       "      <td>mobile_web</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Google CPC no Brand</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BR</td>\n",
+       "      <td>mobile_web</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Google CPC no Brand</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BR</td>\n",
+       "      <td>mobile_web</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Google CPC no Brand</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country creation_platform  admin_visits  intercom_conversations  \\\n",
+       "0      BR        mobile_app           1.0                     0.0   \n",
+       "1      BR        mobile_web           2.0                     0.0   \n",
+       "2      BR        mobile_web           1.0                     0.0   \n",
+       "3      BR        mobile_web           1.0                     0.0   \n",
+       "4      BR        mobile_web           1.0                     0.0   \n",
+       "\n",
+       "         source_pulido  creation_weekday  creation_hour  \\\n",
+       "0                Other                 6              3   \n",
+       "1  Google CPC no Brand                 6              3   \n",
+       "2  Google CPC no Brand                 6              3   \n",
+       "3  Google CPC no Brand                 6              3   \n",
+       "4  Google CPC no Brand                 6              3   \n",
+       "\n",
+       "   products_with_description  total_products_with_images  \\\n",
+       "0                        2.0                           1   \n",
+       "1                        1.0                           1   \n",
+       "2                        0.0                           0   \n",
+       "3                        0.0                           0   \n",
+       "4                        0.0                           0   \n",
+       "\n",
+       "   total_product_categories  total_events_on_Android  total_events_on_Web  \\\n",
+       "0                       0.0                    215.0                  6.0   \n",
+       "1                       0.0                      0.0                 44.0   \n",
+       "2                       0.0                      0.0                 16.0   \n",
+       "3                       0.0                      0.0                 15.0   \n",
+       "4                       0.0                      0.0                 24.0   \n",
+       "\n",
+       "   total_events_on_iOS  target  \n",
+       "0                  0.0       0  \n",
+       "1                  0.0       0  \n",
+       "2                  0.0       0  \n",
+       "3                  0.0       0  \n",
+       "4                  0.0       0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6978c729",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Preparação dos Dados com os Artefatos Importados\n",
+    "Após a importação, os dados precisam ser preparados usando os mesmos artefatos aplicados durante o treinamento dos modelos. Esta etapa assegura que os dados estejam na forma correta para serem utilizados pelos modelos treinados. A preparação inclui a aplicação dos encoders nas variáveis categóricas e a normalização das variáveis numéricas e a seleção das variáveis utilizadas para treinar os modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "efbf3638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecionar uma amostra aleatória do DataFrame original\n",
+    "df_random_sample = df.sample(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1bf9e984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checando quais colunas são do tipo 'object', indicando variáveis categóricas\n",
+    "categorical_columns = df_random_sample.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "# Identificando colunas numéricas (int e float)\n",
+    "numeric_columns = df_random_sample.select_dtypes(include=['int64', 'float64']).drop(columns='target').columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "44477a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>creation_platform</th>\n",
+       "      <th>admin_visits</th>\n",
+       "      <th>intercom_conversations</th>\n",
+       "      <th>source_pulido</th>\n",
+       "      <th>creation_weekday</th>\n",
+       "      <th>creation_hour</th>\n",
+       "      <th>products_with_description</th>\n",
+       "      <th>total_products_with_images</th>\n",
+       "      <th>total_product_categories</th>\n",
+       "      <th>total_events_on_Android</th>\n",
+       "      <th>total_events_on_Web</th>\n",
+       "      <th>total_events_on_iOS</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>305373</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.122713</td>\n",
+       "      <td>-0.084819</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-1.396588</td>\n",
+       "      <td>0.644709</td>\n",
+       "      <td>-0.095145</td>\n",
+       "      <td>-0.104909</td>\n",
+       "      <td>-0.191883</td>\n",
+       "      <td>-0.211642</td>\n",
+       "      <td>-0.107281</td>\n",
+       "      <td>-0.074198</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        country  creation_platform  admin_visits  intercom_conversations  \\\n",
+       "305373      0.0                0.0     -0.122713               -0.084819   \n",
+       "\n",
+       "        source_pulido  creation_weekday  creation_hour  \\\n",
+       "305373            6.0         -1.396588       0.644709   \n",
+       "\n",
+       "        products_with_description  total_products_with_images  \\\n",
+       "305373                  -0.095145                   -0.104909   \n",
+       "\n",
+       "        total_product_categories  total_events_on_Android  \\\n",
+       "305373                 -0.191883                -0.211642   \n",
+       "\n",
+       "        total_events_on_Web  total_events_on_iOS  target  \n",
+       "305373            -0.107281            -0.074198       0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_random_sample[categorical_columns] = encoder_loaded.transform(df_random_sample[categorical_columns])\n",
+    "df_random_sample[numeric_columns] = scaler_loaded.transform(df_random_sample[numeric_columns])\n",
+    "\n",
+    "df_random_sample_filter = df_random_sample[loaded_features]\n",
+    "\n",
+    "df_random_sample.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "178b3316",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Realização de Previsões com os Modelos\n",
+    "Com os dados devidamente preparados, esta etapa foca em utilizar cada um dos três modelos selecionados para realizar previsões."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1c587a6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----- Reinforcement Learning -----\n",
+      "\n",
+      "Prediction: [0]\n",
+      "Percentage for Class 0: 100.00%\n",
+      "Percentage for Class 1: 0.00%\n",
+      "\n",
+      "----- AdaBoost -----\n",
+      "\n",
+      "Prediction: [0]\n",
+      "Percentage for Class 0: 54.48%\n",
+      "Percentage for Class 1: 45.52%\n",
+      "\n",
+      "----- SVM -----\n",
+      "\n",
+      "Prediction: [0]\n",
+      "Percentage for Class 0: 92.26%\n",
+      "Percentage for Class 1: 7.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----- Reinforcement Learning\n",
+    "# Previsão\n",
+    "rf_prediction = best_rf_model.predict(df_random_sample_filter)\n",
+    "rf_probabilities = best_rf_model.predict_proba(df_random_sample_filter)\n",
+    "\n",
+    "# Exibir a predição e as probabilidades para cada classe\n",
+    "print(\"\\n----- Reinforcement Learning -----\\n\")\n",
+    "print(f\"Prediction: {rf_prediction}\")\n",
+    "\n",
+    "# Se desejar apresentar as probabilidades como porcentagens:\n",
+    "rf_percentages = rf_probabilities * 100\n",
+    "print(f\"Percentage for Class 0: {rf_percentages[0][0]:.2f}%\")\n",
+    "print(f\"Percentage for Class 1: {rf_percentages[0][1]:.2f}%\")\n",
+    "\n",
+    "# ----- AdaBoost\n",
+    "# Previsão \n",
+    "ada_prediction = best_ada_model.predict(df_random_sample_filter)\n",
+    "ada_probabilities = best_ada_model.predict_proba(df_random_sample_filter)\n",
+    "\n",
+    "# Exibir a predição e as probabilidades para cada classe\n",
+    "print(\"\\n----- AdaBoost -----\\n\")\n",
+    "print(f\"Prediction: {ada_prediction}\")\n",
+    "\n",
+    "# Se desejar apresentar as probabilidades como porcentagens:\n",
+    "ada_percentages = ada_probabilities * 100\n",
+    "print(f\"Percentage for Class 0: {ada_percentages[0][0]:.2f}%\")\n",
+    "print(f\"Percentage for Class 1: {ada_percentages[0][1]:.2f}%\")\n",
+    "\n",
+    "# ----- SVM\n",
+    "# Previsão \n",
+    "svm_prediction = best_svm_model.predict(df_random_sample_filter)\n",
+    "svm_probabilities = best_svm_model.predict_proba(df_random_sample_filter)\n",
+    "\n",
+    "# Exibir a predição e as probabilidades para cada classe\n",
+    "print(\"\\n----- SVM -----\\n\")\n",
+    "print(f\"Prediction: {svm_prediction}\")\n",
+    "\n",
+    "# Se desejar apresentar as probabilidades como porcentagens:\n",
+    "svm_percentages = svm_probabilities * 100\n",
+    "print(f\"Percentage for Class 0: {svm_percentages[0][0]:.2f}%\")\n",
+    "print(f\"Percentage for Class 1: {svm_percentages[0][1]:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1524e0d6",
+   "metadata": {},
+   "source": [
+    "![title](imgs/end.png)"
+   ]
   }
  ],
  "metadata": {
