--- a/codes/notebook/03_MLModel.ipynb
+++ b/codes/notebook/03_MLModel.ipynb
@@ -285,16 +285,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f1717f93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.sample(10000)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7d96d26a",
    "metadata": {},
@@ -782,7 +772,7 @@
     "# Ordenando as características pela importância\n",
     "features_df = features_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "# Você pode selecionar as características mais importantes com base em um limiar de importância\n",
+    "# Selecionar as características mais importantes com base em um limiar de importância\n",
     "selected_features = features_df[features_df['Importance'] > 0.05]  # ajuste o limiar conforme necessário\n",
     "\n",
     "# Exibindo as características selecionadas\n",
@@ -1447,10 +1437,10 @@
     "df_acc.reset_index(inplace=True)\n",
     "df_acc.rename(columns={'index': 'Algoritmo'}, inplace=True)\n",
     "\n",
-    "# Derretendo o DataFrame para ter uma coluna 'Conjunto' e uma coluna 'Score'\n",
+    "# Coluna 'Conjunto' e uma coluna 'Score'\n",
     "df_melted = df_acc.melt(id_vars=['Algoritmo'], var_name='Conjunto', value_name='Score')\n",
     "\n",
-    "# Plotando o gráfico de barras usando Seaborn\n",
+    "# Plotando o gráfico\n",
     "sns.barplot(data=df_melted, x='Algoritmo', y='Score', hue='Conjunto')\n",
     "plt.title('Score de Treino e Teste para Cada Algoritmo')\n",
     "plt.legend(loc = 'lower right')\n",
